--- a/Backend/SpringApplication/build.gradle
+++ b/Backend/SpringApplication/build.gradle
@@ -25,15 +25,10 @@ repositories {
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
-	<properties>
-		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<java.version>1.8</java.version>
-	</properties>
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
-    compile("org.springframework.data:spring-data-solr:3.0.7.RELEASE")
+    testCompile("org.springframework.boot:spring-boot-starter-test")
     testCompile("junit:junit")
 }
 
